--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,16 @@
         "php": ">=5.5.0",
         "slim/slim": "^3.1",
         "slim/php-view": "^2.0",
-        "monolog/monolog": "^1.17"
+        "monolog/monolog": "^1.17",
+        "irazasyed/telegram-bot-sdk": "^2.2"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Tests\\": "tests/",
+            "App\\": "src/"
         }
     },
 	"scripts": {
