--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "slim/slim": "^3.1",
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
-        "irazasyed/telegram-bot-sdk": "^2.2"
+        "irazasyed/telegram-bot-sdk": "^2.2",
+        "illuminate/database": "~5.1",
+        "vlucas/phpdotenv": "^2.4"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
