--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "monolog/monolog": "^1.17",
         "irazasyed/telegram-bot-sdk": "^2.2",
         "illuminate/database": "~5.1",
-        "vlucas/phpdotenv": "^2.4"
+        "vlucas/phpdotenv": "^2.4",
+        "robmorgan/phinx": "0.5.*"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
